--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,43 @@
+amqp==5.1.0
 asgiref==3.5.0
+async-timeout==4.0.2
 attrs==21.4.0
 autobahn==22.3.2
 Automat==20.2.0
+billiard==3.6.4.0
+celery==5.2.6
 cffi==1.15.0
 channels==3.0.4
+click==8.1.2
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
 constantly==15.1.0
 cryptography==36.0.2
 daphne==3.0.2
+Deprecated==1.2.13
 Django==3.2.12
 hyperlink==21.0.0
 idna==3.3
 incremental==21.3.0
+kombu==5.2.4
+packaging==21.3
+prompt-toolkit==3.0.29
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
+pymongo==4.1.0
 pyOpenSSL==22.0.0
+pyparsing==3.0.7
 pytz==2022.1
+redis==4.2.2
 service-identity==21.1.0
 six==1.16.0
 sqlparse==0.4.2
 Twisted==22.2.0
 txaio==22.2.1
 typing-extensions==4.1.1
+vine==5.0.0
+wcwidth==0.2.5
+wrapt==1.14.0
 zope.interface==5.4.0
