--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+aiohttp==3.8.1
+aiosignal==1.2.0
 amqp==5.1.0
 asgiref==3.5.0
 async-timeout==4.0.2
@@ -6,8 +8,10 @@ autobahn==22.3.2
 Automat==20.2.0
 billiard==3.6.4.0
 celery==5.2.6
+certifi==2021.10.8
 cffi==1.15.0
 channels==3.0.4
+charset-normalizer==2.0.12
 click==8.1.2
 click-didyoumean==0.3.0
 click-plugins==1.1.1
@@ -15,12 +19,15 @@ click-repl==0.2.0
 constantly==15.1.0
 cryptography==36.0.2
 daphne==3.0.2
+dateparser==1.1.1
 Deprecated==1.2.13
 Django==3.2.12
+frozenlist==1.3.0
 hyperlink==21.0.0
 idna==3.3
 incremental==21.3.0
 kombu==5.2.4
+multidict==6.0.2
 packaging==21.3
 prompt-toolkit==3.0.29
 pyasn1==0.4.8
@@ -29,15 +36,26 @@ pycparser==2.21
 pymongo==4.1.0
 pyOpenSSL==22.0.0
 pyparsing==3.0.7
+python-binance==1.0.16
+python-dateutil==2.8.2
 pytz==2022.1
+pytz-deprecation-shim==0.1.0.post0
 redis==4.2.2
+regex==2022.3.2
+requests==2.27.1
 service-identity==21.1.0
 six==1.16.0
 sqlparse==0.4.2
 Twisted==22.2.0
 txaio==22.2.1
 typing-extensions==4.1.1
+tzdata==2022.1
+tzlocal==4.2
+ujson==5.2.0
+urllib3==1.26.9
 vine==5.0.0
 wcwidth==0.2.5
+websockets==10.2
 wrapt==1.14.0
+yarl==1.7.2
 zope.interface==5.4.0
