--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 aiohttp==3.8.1
+aioredis==1.3.1
 aiosignal==1.2.0
 amqp==5.1.0
 asgiref==3.5.0
@@ -11,6 +12,7 @@ celery==5.2.6
 certifi==2021.10.8
 cffi==1.15.0
 channels==3.0.4
+channels-redis==3.4.0
 charset-normalizer==2.0.12
 click==8.1.2
 click-didyoumean==0.3.0
@@ -22,11 +24,15 @@ daphne==3.0.2
 dateparser==1.1.1
 Deprecated==1.2.13
 Django==3.2.12
+django-crispy-forms==1.14.0
+django-redis==5.2.0
 frozenlist==1.3.0
+hiredis==2.0.0
 hyperlink==21.0.0
 idna==3.3
 incremental==21.3.0
 kombu==5.2.4
+msgpack==1.0.3
 multidict==6.0.2
 packaging==21.3
 prompt-toolkit==3.0.29
