--- a/requirements.txt
+++ b/requirements.txt
@@ -24,8 +24,10 @@ daphne==3.0.2
 dateparser==1.1.1
 Deprecated==1.2.13
 Django==3.2.12
+django-celery-beat==2.2.1
 django-crispy-forms==1.14.0
 django-redis==5.2.0
+django-timezone-field==4.2.3
 frozenlist==1.3.0
 hiredis==2.0.0
 hyperlink==21.0.0
@@ -43,6 +45,7 @@ pymongo==4.1.0
 pyOpenSSL==22.0.0
 pyparsing==3.0.7
 python-binance==1.0.16
+python-crontab==2.6.0
 python-dateutil==2.8.2
 pytz==2022.1
 pytz-deprecation-shim==0.1.0.post0
